Add support for run_server script